eval_outputs/diff_only/code_change/second/google/chain-of-thought.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/chain-of-thought.spec.ts: Unexpected token, expected "," (12:20)

  10 |   }));
  11 |
> 12 |   await mount(<Home formBody={mockFormBody} />);
     |                     ^
  13 |
  14 |   const paragraph = await page.locator('.text-xs.text-gray-500.dark:text-gray-400.mt-1');
  15 |

   at chain-of-thought.spec.ts:12

  10 |   }));
  11 |
> 12 |   await mount(<Home formBody={mockFormBody} />);
     |                    ^
  13 |
  14 |   const paragraph = await page.locator('.text-xs.text-gray-500.dark:text-gray-400.mt-1');
  15 |

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

